# aw-watcher-media-player

./: .gitignore  Cargo.toml  README.md  build.rs  clippy.toml  windows.nsi
.github/workflows/: release.yml  verify.yml
src/: config.rs  main.rs  platform.rs  watcher.rs
src/platform/: linux.rs  macos.rs  windows.rs
visualization/: index.html
