[package]
name = "aw-watcher-media-player"
authors = ["Demmie <2e3s19@gmail.com>"]
version = "1.1.0"
edition = "2021"
description = "A cross-platform watcher to report currently playing media to ActivityWatch."
license-file = "LICENSE"

[dependencies]
aw-client-rust = { git = "https://github.com/ActivityWatch/aw-server-rust", rev = "448312d" }
anyhow = "1.0.75"
chrono = "0.4.31"
gethostname = "0.4.3"
serde_json = "1.0.107"
signal-hook = "0.3.17"
log = { version = "0.4.20", features = ["std"] }
simple_logger = "4.2.0"
toml = "0.8.8"
clap = { version = "4.4.10", features = ["derive"] }
serde = { version = "1.0.193", features = ["derive"] }
clap-verbosity-flag = "2.1.0"
tokio = { version = "1.34.0", features = ["time", "macros", "signal", "rt-multi-thread"] }
dirs = "5.0.1"

[target.'cfg(target_env = "msvc")'.build-dependencies]
static_vcruntime = { version = "2.0" }

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
mpris = "2.0.1"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.52.0"
features = [
	"Foundation",
	"Media_Control",
]

[package.metadata.deb]
extended-description = "ActivityWatch must be available by the given address for this watcher to work."

assets = [
    ["target/release/aw-watcher-media-player", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/aw-watcher-media-player/README", "644"],
	["visualization/index.html", "usr/share/aw-watcher-media-player/visualization/index.html", "644"],
]
